--- a/css/component.css
+++ b/css/component.css
@@ -10,7 +10,7 @@
 }
 
 .demo-1 .large-header {
-	background-image: url('../image/3.gif');
+	background-image: url('../image/5.png');
 }
 .logo_box{
 	width: 400px;
