--- a/css/style.css
+++ b/css/style.css
@@ -31,42 +31,46 @@ body {
 
 .registration-form {
   padding: 3rem;
-  background-color: rgba(255, 255, 255, 0.6);
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0); /* 保持全透明背景 */
+  border: 1px solid #ffffff; /* 添加白色边框 */
+  border-radius: 24px;
+  box-shadow: 0 4px 6px rgba(17, 17, 84, 0.502); /* 添加一个微妙的阴影效果，颜色和模糊程度可按需调整 */
+  align-items: center;
 
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: flex-start;
 
   label {
-      display: block;
-      margin-bottom: 16px;
-      text-align: left; /* 文字（标签）左对齐 */
-      width: 100%;
-      padding: 0 16px; /* 可根据需要调整内边距 */
+    display: block;
+    margin-bottom: 16px;
+    text-align: left;
+    width: 100%;
+    padding: 0 16px;
+    color: #ffffff; /* 将此处颜色值改为白色 */
   }
   
   input[type="text"], input[type="email"], input[type="password"] {
       display: block;
-      width: 100%;
-      padding: 12px 16px;
+      width: 90%;
+      padding: 10px 16px;
       font-size: 16px;
       border: 1px solid #ccc;
-      border-radius: 4px;
-      background-color: rgba(255, 255, 255, 0.9);
+      border-radius: 12px;
+      background-color: rgba(255, 255, 255, 0.445);
       text-align: center; /* 文字框内容居中 */
   }
 
   button[type="submit"] {
-      background-color: #0b2c50;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      width: 100%;
-      margin-top: 16px;
-      text-align: center;
+    background-color: #0b2c50;
+    color: white;
+    padding: 13px 20px;
+    font-size: 20px;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    width: 30%;
+    margin-top: 1.5rem; /* 添加一个下外边距以使其向下偏移一段距离，您可以根据需要调整这个数值 */
+    text-align: center;
   }
 }
